# sailor-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: integrating-sailor-in-python.md
src/sailor/: __init__.py  connection.py  consumer.py  crypto.py  defaults.py  dev.py  errors.py  fallback.py  options.py  pull.py  transport.py  volume.py
tests/: conftest.py  test_connection.py  test_consumer.py  test_crypto.py  test_dev.py  test_fallback.py  test_options_defaults.py  test_volume.py
