[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sailor-py"
version = "0.1.0"
description = "Type-safe Python client for Sailor — configuration & secret management for cloud-native apps"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "SailorHQ" }]
keywords = ["sailor", "configuration", "secrets", "kubernetes", "config-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "cryptography>=41.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/sailorhq/sailor"
Repository = "https://github.com/sailorhq/sailor-py"

[tool.hatch.build.targets.wheel]
packages = ["src/sailor"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/sailor"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
